# 20251022T111449_DanilloSouza03_PayTrack-API

./: README.md  pyproject.toml
.github/workflows/: sonarcloud.yml
src/: main.py
src/app/: bill_usecase.py  exceptions.py
src/app/dtos/: bill_dto.py
src/domain/: bill.py
src/domain/ports/: bill_repository_port.py
src/infra/: bill_controller.py  bill_repository.py  db_memory.py
src/infra/schemas/: bill_schema.py
tests/: test_app.py  test_domain.py  test_infra.py
