[project]
name = "paytrack-api"
version = "0.1.0"
description = "Api para consumo da PayTrack-web e controle de contas pessoais."
authors = [
    {name = "Danillo Souza Pereira",email = "danillodesouza03@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
